--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,20 @@
 [tool.poetry]
 name = "cv-aid"
-version = "0.1.0"
+version = "0.1.1"
 description = "CV Aid is a set of helpers of computer vision tasks."
 authors = ["Khalid Mohamed Elborai <accnew820@gmail.com>"]
 license = "GNU Version 3"
+packages = [
+    { include = "cv_aid" },
+    { include = "tests", format = "sdist" },
+    { include = "tests", format = "wheel" },
+    { include = "scripts.py", format = "sdist" },
+    { include = "scripts.py", format = "wheel" },
+]
+readme = "README.md"
+repository = "https://github.com/khalidelborai/cv-aid"
+keywords = ["computer vision", "cv", "image", "processing", "helpers","open-cv"]
+
 
 [tool.poetry.dependencies]
 python = "^3.8"
