--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cv-aid"
-version = "0.1.4"
+version = "0.1.5"
 description = "CV Aid is a set of helpers for computer vision tasks."
 authors = ["Khalid Mohamed Elborai <accnew820@gmail.com>"]
 license = "GNU Version 3"
@@ -22,6 +22,10 @@ deepstack-sdk = "^0.2.1"
 filetype = "^1.0.9"
 numpy = "^1.21"
 opencv-python = "^4.1.0"
+# tqdm = "^4.62.3"
+# requests = "^2.27.1"
+# cmake = "^3.22.1"
+# dlib = "^19.22.1"
 
 
 [tool.poetry.dev-dependencies]
