--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cv-aid"
-version = "0.2.0"
+version = "1.0.0"
 description = "CV Aid is a set of helpers for computer vision tasks."
 authors = ["Khalid Mohamed Elborai <accnew820@gmail.com>"]
 license = "GNU Version 3"
@@ -29,6 +29,11 @@ dlib = "^19.22.1"
 
 
 [tool.poetry.dev-dependencies]
+black = {version = "^22.1.0", allow-prereleases = true}
+pydoctor = "^21.12.1"
+pydoc-markdown = "^4.5.0"
+mkdocs = "^1.2.3"
+lazydocs = "^0.4.8"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
