--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dlib = "^19.22.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.1.0", allow-prereleases = true}
-lazydocs = "^0.4.8"
+lazydocs = {git = "https://github.com/khalidelboray/lazydocs.git", rev = "main"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
